lyrics-service/k8s/base/lyrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: lyrics-mongodb
  labels:
    app: lyrics-service
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/part-of: right-lyrics
  name: lyrics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lyrics-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: lyrics-service
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc.cluster.local:5000/right-lyrics/lyrics-service:latest
          imagePullPolicy: Always
          name: lyrics-service
          ports:
            - containerPort: 8080
