lyrics-service/k8s/base/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lyrics-mongodb
    app.openshift.io/runtime: mongodb
    app.kubernetes.io/part-of: right-lyrics
  name: lyrics-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lyrics-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: lyrics-mongodb
    spec:
      containers:
        - image: registry.access.redhat.com/rhscl/mongodb-36-rhel7
          imagePullPolicy: Always
          name: lyrics-mongodb
          ports:
            - containerPort: 6379
