lyrics-service/k8s/base/lyrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lyrics-service
  name: lyrics-service
spec:
  ports:
    - name: tcp-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: lyrics-service
